# MisideTrainer

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
docs/: README.md  README_RU.md  README_ZH-CN.md
manager/: trainermanager.cpp  trainermanager.h
resources/: resources.qrc
resources/translations/: MisideTrainer_en_US.qph  MisideTrainer_en_US.ts  MisideTrainer_ru_RU.qph  MisideTrainer_ru_RU.ts  MisideTrainer_zh_CN.qph  MisideTrainer_zh_CN.ts
trainer/: alternativemenutrainer.cpp  alternativemenutrainer.h  dairyscandaltrainer.cpp  dairyscandaltrainer.h  dancefloortrainer.cpp  dancefloortrainer.h  gameconsoletrainer.cpp  gameconsoletrainer.h  hetoortrainer.cpp  hetoortrainer.h  penguinpilestrainer.cpp  penguinpilestrainer.h  quadrangletrainer.cpp  quadrangletrainer.h  spacecarbosstrainer.cpp  spacecarbosstrainer.h  spacecartrainer.cpp  spacecartrainer.h  trainer.cpp  trainer.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
utils/: processmonitor.cpp  processmonitor.h
